# cfilesize

./: CMakeLists.txt  CMakePresets.json  README.org
include/: cfilesize.h
include/cfilesize/private/: generic.h  unix.h
src/: CMakeLists.txt  cfilesize.c  cfilesize_unix.c
test/: CMakeLists.txt  test_cfilesize.cpp
